# pkg-graph-

./: LICENSE  README.md  pyproject.toml  sample-colors.json
pkg_graph/: __init__.py  cli.py  engine.py  graph.py
pkg_graph/resolvers/: __init__.py
scripts/: apt-deps.sh  dnf-deps.sh  pacman-deps.sh
