[project]
name = "pkg-graph"
version = "0.1.0"
description = "跨 Linux 发行版的离线递归依赖分析与可视化工具，支持自定义颜色"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "pkg-graph contributors"}]

[project.scripts]
pkg-graph = "pkg_graph.cli:main"

[project.optional-dependencies]
graphviz = ["graphviz>=0.20"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pkg_graph"]
